--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/jasmine": "~3.3.12",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~12.0.2",
+    "adm-zip": ">=0.4.11",
     "codelyzer": "^5.0.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -46,6 +47,7 @@
     "serialize-javascript": ">=2.1.1",
     "protractor": "~5.4.0",
     "ts-node": "~8.1.0",
-    "tslint": "~5.11.0"
+    "tslint": "~5.11.0",
+    "ws": ">=3.3.1"
   }
 }
